corrections of contrast in the navbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ nav a {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
